The `hax_` cheat codes now mark the appropriate locations as visited so they appear on the world map.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -309,7 +309,7 @@ properties: {
 
 	hax_nene: "[  /* just finished nene's basement quest */
 		;set_item_amount(enum item_fire_breath_talisman, 1),
-		
+		;add(levels_visited, ['frogatto-grotto.cfg', 'to-nenes-house.cfg']),
 		;store_event('talked_to_nene', 1),
 		;store_event('nenes_treasure_chest_unlocked', 1),
 		;store_event('nenes_basement_ants_killed', 3),
@@ -318,16 +318,19 @@ properties: {
 	hax_mtm: "[  /* being past Mortimer's house */
 		;hax_nene,
 
+        ;add(levels_visited, ['secluded-hut.cfg']),
 		;set_item_amount(enum item_magic_map, 1),
 		;set_item_amount(enum item_heart_container, 3),
 		
 		store_event('stonepipe_bridge_fight_won',1),
 		store_event('berds_post_airplane_boss_speech',1),
 	]",
-
+    
 	hax_elder: "[  /* just beat the elder's house fight */
 		;hax_mtm
-		
+
+		;add(levels_visited, ['crevice-village.cfg']),
+        
 		;set_item_amount(enum item_magic_map, 1),
 		;set_item_amount(enum item_heart_container, 4), //unlike `hax_tempo`, we're assuming you haven't hunted around and bought extra hearts.
 		;add_item(enum item_fire_breath_talisman, 1),
@@ -338,7 +341,7 @@ properties: {
 	
 	hax_tempo: "[  /* being at tempo village, but not having talked to anyone yet */
 		;hax_elder
-	
+        ;add(levels_visited, ['foreboding-forest.cfg', 'rustic-route.cfg']),
 		;set_item_amount(enum item_magic_map, 1),
 		;set_item_amount(enum item_heart_container, 5), //we assume you've gotten the hearts from the airplane boss, from ralph, and also probably found or bought one extra one.
 		;add_item(enum item_fire_breath_talisman, 1),
@@ -348,6 +351,7 @@ properties: {
 	hax_gazer: "[ /* having beaten the gazer boss, talked to prospera beforehand, but NOT talked to prospera afterwards. */
 		;hax_tempo
 
+        ;add(levels_visited, ['musty-mine.cfg']),
 		;set_item_amount(enum item_magic_map, 1),
 		;set_item_amount(enum item_heart_container, 5),
 		;add_item(enum item_fire_breath_talisman, 1),
@@ -384,7 +388,8 @@ properties: {
 	hax_moth: "[ /* having beaten the moth boss. */
 		;hax_gazer
 
-
+        ;add(levels_visited, ['ravenish-ravine.cfg', 'shady-shortcut.cfg']), //we assume you passed by/found Shady Shortcut
+        
 		;set_item_amount(enum item_magic_map, 1),
 		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 6),
@@ -399,7 +404,8 @@ properties: {
 	hax_mushroom: "[ /* having beaten the mushroom boss. */
 		;hax_gazer
 
-
+        ;add(levels_visited, ['the-empty-place.cfg', 'shady-shortcut.cfg']), //we assume you passed by/found Shady Shortcut
+        
 		;set_item_amount(enum item_magic_map, 1),
 		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 6),
