Added but did not wire in, several new triggers in the credits scene to list new people.

--- a/data/level/Dungeon/tea-with-milgram.cfg
+++ b/data/level/Dungeon/tea-with-milgram.cfg
@@ -75,7 +75,7 @@
 					]",
 			"on_TextGuido": "[	(obj text_controller_fading <- get_object_or_die(level,'big_text')).set_text('Guido Bos (Neoriceisgood)'),
 					(obj text_controller_fading <- get_object_or_die(level,'small_text1')).set_text(~Artist • Characters, Monsters, and Props~),
-					(obj text_controller_fading <- get_object_or_die(level,'small_text2')).set_text(~Artist • House interiors and exteriors~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text2')).set_text(~Artist • Seaside House interiors~),
 					(obj text_controller_fading <- get_object_or_die(level,'small_text3')).set_text(' '),
 					(obj text_controller_fading <- get_object_or_die(level,'small_text4')).set_text(' ')
 					]",
@@ -85,7 +85,7 @@
 					(obj text_controller_fading <- get_object_or_die(level,'small_text3')).hide_text,
 					(obj text_controller_fading <- get_object_or_die(level,'small_text4')).hide_text
 					]",
-			"on_TextIris": "[	(obj text_controller_fading <- get_object_or_die(level,'big_text')).set_text('Iris Morelle (shikadiqueen)'),
+			"on_TextIris": "[	(obj text_controller_fading <- get_object_or_die(level,'big_text')).set_text('Iris Morelle (irydacea)'),
 					(obj text_controller_fading <- get_object_or_die(level,'small_text1')).set_text(~Level Designer • forest, cave, and dungeon levels~),
 					(obj text_controller_fading <- get_object_or_die(level,'small_text2')).set_text(~Object Scripter~),
 					(obj text_controller_fading <- get_object_or_die(level,'small_text3')).set_text(' '),
@@ -132,6 +132,43 @@
 					(obj text_controller_fading <- get_object_or_die(level,'small_text2')).set_text(' '),
 					(obj text_controller_fading <- get_object_or_die(level,'small_text3')).set_text(' '),
 					(obj text_controller_fading <- get_object_or_die(level,'small_text4')).set_text(' ')
+					]",
+					
+			"on_TextArtists": "[	(obj text_controller_fading <- get_object_or_die(level,'big_text')).set_text(~Art Contributions:~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text1')).set_text(~Franck Dupont (Arikel) - Props~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text2')).set_text(~Levie - FX art~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text3')).set_text(~Matt Martinez (HyMyNameIsMatt) - NPC and Setpiece art~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text4')).set_text(~Alex Mcdonald (Cannonbreed) - FX and NPC art~)
+					]",
+			"on_TextBeta1": "[	(obj text_controller_fading <- get_object_or_die(level,'big_text')).set_text(~Beta Testers:~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text1')).set_text(~LaserCat - notorious bug finder~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text2')).set_text(~al0f - notorious bug fixer~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text3')).set_text(~Cuber01 - bug fixes~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text4')).set_text(~Akhiros - bug fixes~)
+					]",
+			"on_TextBeta2": "[	(obj text_controller_fading <- get_object_or_die(level,'big_text')).set_text(~Beta Testers:~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text1')).set_text(~yuke~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text2')).set_text(~MaximilianX~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text3')).set_text(~shadow1w2~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text4')).set_text(~goobothy~)
+					]",
+			"on_TextBeta3": "[	(obj text_controller_fading <- get_object_or_die(level,'big_text')).set_text(~Beta Testers:~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text1')).set_text(~Mitchell~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text2')).set_text(~Guardian of Irala~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text3')).set_text(~UbuntuJackson~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text4')).set_text(~dardasaba~)
+					]",
+			"on_TextBeta3": "[	(obj text_controller_fading <- get_object_or_die(level,'big_text')).set_text(~Beta Testers:~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text1')).set_text(~candidus~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text2')).set_text(~cpdef~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text3')).set_text(~Jaman12~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text4')).set_text(~Nageron~)
+					]",
+			"on_TextBeta3": "[	(obj text_controller_fading <- get_object_or_die(level,'big_text')).set_text(~Beta Testers:~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text1')).set_text(~Pixel~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text2')).set_text(~bonkiodoctor~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text3')).set_text(~ClientQUI~),
+					(obj text_controller_fading <- get_object_or_die(level,'small_text4')).set_text(~FrostC~)
 					]",
 			"on_create": "speech_dialog(level.player, set(level.player.facing, 1),
 	          							   set(level.player.control_lock, []),
