Add a world map teleporter before the moth boss, to give the player a chance to buy a potion to help win the fight (or backtrack for more hearts).

--- a/data/level/Forest/perilous-precipice.cfg
+++ b/data/level/Forest/perilous-precipice.cfg
@@ -6,10 +6,10 @@
 	"background_palette": "forest_graveyard_shift",
 	"character": [
 		{
-			"_addr": "0x15a858a00",
+			"_uuid": "21a46c66c1754b09b788b27f8c746098",
 			"current_frame": "normal",
-			"custom": 1,
-			"is_human": 1,
+			"custom": true,
+			"is_human": true,
 			"label": "_592aff27",
 			"objects_destroyed": {
 				"level": "perilous-precipice.cfg",
@@ -20,9 +20,9 @@
 			"y": 224
 		},
 		{
-			"_addr": "0x15a85fc00",
+			"_uuid": "73ac7ac7c8e54158a31a57b85bd03a3b",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5701b857",
 			"type": "ivy_foreground1",
 			"x": -112,
@@ -30,86 +30,86 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "0x15a860400",
+			"_uuid": "ccfe69162178403c8f4c50828a24c9a9",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_192c9d5d",
 			"type": "rock_foreground_forest3",
 			"x": 100,
 			"y": 228
 		},
 		{
-			"_addr": "0x15a860c00",
+			"_uuid": "099a9c621c0b4656b6c77ee395fb178b",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_268b6d1b",
 			"type": "rock_foreground_forest4",
 			"x": 272,
 			"y": 251
 		},
 		{
-			"_addr": "0x15a861400",
+			"_uuid": "566792f701ec44c8a1cbf0abef5b5229",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_61cf0be8",
 			"type": "rock_foreground_forest4",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": 84,
 			"y": -184
 		},
 		{
-			"_addr": "0x15a861c00",
+			"_uuid": "406152e439fe4357898291daf826cf50",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_43ea07bc",
 			"type": "rock_foreground_forest1",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -100,
 			"y": -86
 		},
 		{
-			"_addr": "0x15a862400",
+			"_uuid": "cb4c25a625a049d1a232568c4576b522",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_1c2148ff",
 			"type": "rock_background_cubic4",
 			"x": 261,
 			"y": 134
 		},
 		{
-			"_addr": "0x15a862c00",
+			"_uuid": "39905bcef5d848eb9f66f7a92f8a2b6c",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_2f7fe334",
 			"type": "rock_background_cubic1",
 			"x": 165,
 			"y": 70
 		},
 		{
-			"_addr": "0x15a863400",
+			"_uuid": "ef928d5a8d1443e88a9d4bf8336807ea",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_3d8c30da",
 			"type": "rock_background_cubic3",
 			"x": 549,
 			"y": 166
 		},
 		{
-			"_addr": "0x15a863c00",
+			"_uuid": "ba942131eeed49c8914cb34885a0e38c",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_440389e7",
 			"type": "rock_background_cubic1",
 			"x": 448,
 			"y": 352
 		},
 		{
-			"_addr": "0x15a864400",
+			"_uuid": "29fa30ca388f4dc0bb8b77c2c3e4d40e",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_1f249997",
 			"property_data": {
 				"_x2_bound": 1712,
@@ -123,9 +123,9 @@
 			"y": 448
 		},
 		{
-			"_addr": "0x15a864c00",
+			"_uuid": "a25d1902784a404988eaee2e09f2e497",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_763aef8b",
 			"property_data": {
 				"_x2_bound": 150,
@@ -139,9 +139,9 @@
 			"y": 192
 		},
 		{
-			"_addr": "0x15a865400",
+			"_uuid": "6c792bcf470b47fbad235c0e6bbc2c22",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_38765481",
 			"property_data": {
 				"_x2_bound": 864,
@@ -155,10 +155,10 @@
 			"y": -256
 		},
 		{
-			"_addr": "0x15a865c00",
-			"always_active": 1,
+			"_uuid": "f9845ac2001744e48ce14f369ce3c78c",
+			"always_active": true,
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "berd",
 			"on_interact": "if( (not frogatto.get_stored_event('moth_boss_fight_won')),
 									[swallow_event(), frogatto.scripted_move_to_x(988, 1, def() -> commands [fire_event(controller, 'script1')])])
@@ -176,18 +176,18 @@
 			"y": 191
 		},
 		{
-			"_addr": "0x15a866400",
+			"_uuid": "5cc543507d3a4413ab2fe03d1387abaf",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_62af8d5f",
 			"type": "ivy_foreground3",
 			"x": 406,
 			"y": 215
 		},
 		{
-			"_addr": "0x15a867400",
+			"_uuid": "cba846e1d37d4d0d8e968dd601aa06dd",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "postfight_dialogue_controller",
 			"on_create": "if(level.player.get_stored_event('moth_boss_fight_won') and (not level.player.get_stored_event('moth_boss_postfight_dialogue')),fire_event(me,'postfight_dialogue'))",
 			"on_postfight_dialogue": "[	level.player.store_event('moth_boss_postfight_dialogue',1),
@@ -207,9 +207,11 @@
 		{
 			"_uuid": "7db1fa8b81d6463a9a5d0b744f5beb04",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "prefight_dialogue_controller",
-
+			"on_create": "[
+				set(custom_storage['fake_berd'], object('berd_npc.non_solid_passenger', x, y, 1)),
+			]",
 			"on_script1": "
 				[speech_dialog(
 								sinusoidal_transition({period:200, _init_theta:0.0, _length_theta:1.0, addend:1.0, coefficient:-0.5, obj:level, aspect:'zoom'}),
@@ -370,12 +372,6 @@
 				where Fake_Berd = (obj standard_values <- me.custom_storage['fake_berd'])
 							",
 			"on_script8": "[set(level.player.is_running, true),level.player.scripted_move_to_x(1240,1, def() -> commands [set(level.player.control_lock, [])] ), schedule(120,teleport('perilous-precipice-fall.cfg','','',null,true) )] asserting level.player is obj frogatto_playable",
-
-
-			"on_create": "[
-				set(custom_storage['fake_berd'], object('berd_npc.non_solid_passenger', x, y, 1)),
-			]",
-
 			"property_data": {
 				"_x2_bound": 662,
 				"_x_bound": 412,
@@ -387,72 +383,72 @@
 			"y": 128
 		},
 		{
-			"_addr": "0x15a86cc00",
+			"_uuid": "30dcf614d2804b3da3f1b301dd46e025",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_373e",
 			"type": "pillar_block2",
 			"x": -416,
 			"y": 263
 		},
 		{
-			"_addr": "0x15a86d400",
+			"_uuid": "67ee471f9e36425681dc0536b23dff7f",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_18b7",
 			"type": "pillar_block3",
 			"x": -288,
 			"y": 272
 		},
 		{
-			"_addr": "0x15a86dc00",
+			"_uuid": "7645ead68e034eb991e86b508f3cb04f",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_725d",
 			"type": "pillar_block5",
 			"x": -224,
 			"y": 293
 		},
 		{
-			"_addr": "0x15a891000",
+			"_uuid": "41c2a43260e34d26bb1fe78dca60a959",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_23e1",
 			"type": "rock_foreground_cubic1",
 			"x": -448,
 			"y": 320
 		},
 		{
-			"_addr": "0x15a891800",
+			"_uuid": "4f45aaf3aa78451db8ebf52012dc0ff5",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_200",
 			"type": "pillar_exterior_footing1",
 			"x": -256,
 			"y": 256
 		},
 		{
-			"_addr": "0x15a892000",
+			"_uuid": "9396d71ab97b4ccda4294a3d469062ee",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_103d",
 			"type": "pillar_exterior_decoration2",
 			"x": -256,
 			"y": 96
 		},
 		{
-			"_addr": "0x15a892800",
+			"_uuid": "84888df6f3074593b61817638d16807b",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_54b0",
 			"type": "pillar_exterior_segment3",
 			"x": -224,
 			"y": 0
 		},
 		{
-			"_addr": "0x1577e8e00",
+			"_uuid": "dd7abae3524c4e8984d0d65315573fb3",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_4e870ed7",
 			"property_data": {
 				"_x2_bound": -46,
@@ -463,6 +459,15 @@
 			"type": "save_statue",
 			"x": -126,
 			"y": 262
+		},
+		{
+			"_uuid": "2e7c704ddec541159c0cd71f6b56d233",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "world_map_pedestal",
+			"type": "world_map_pedestal",
+			"x": -32,
+			"y": 254
 		}
 	],
 	"dimensions": [-352,-224,2143,2143],
@@ -476,7 +481,7 @@
 	"serialized_objects": {
 		"character": []
 	},
-	"set_screen_resolution_on_entry": 0,
+	"set_screen_resolution_on_entry": false,
 	"tile_map": [
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr
@@ -760,7 +765,7 @@ fug,,,,,,fug,fug,fug
 		}
 	],
 	"title": "Perilous Precipice",
-	"touch_controls": 1,
+	"touch_controls": true,
 	"vars": {
 	},
 	"version": "1.4",
