--- a/data/objects/playable/map_selector.cfg
+++ b/data/objects/playable/map_selector.cfg
@@ -21,6 +21,7 @@ properties: {
 					{ x:465, y:315, level_filename:'rustic-route.cfg',						level_prettyname:~Rustic Route~				},
 					{ x:494, y:270, level_filename:'shady-shortcut.cfg',					level_prettyname:~Shady Shortcut~			},
 					{ x:456, y:248, level_filename:'the-empty-place.cfg',					level_prettyname:~Grisly Grotto~			},
+					{ x:390, y:260, level_filename:'perilous-precipice.cfg',				level_prettyname:~Perilous Precipice~		},
 					{ x:380, y:305, level_filename:'ravenish-ravine.cfg',					level_prettyname:~Ravenish Ravine~			},
 					{ x:410, y:285, level_filename:'bon-bosque.cfg',						level_prettyname:~Bon Bosque~				},
 					{ x:330, y:245, level_filename:'watery-alley.cfg',						level_prettyname:~Watery Alley~				},
