Fixed a bug where the walk position for the player, after beating milgram, could in rare cases pick a position that's impossible to reach because it's buried in a wall, leading to the player permanently being stuck walking.

--- a/data/level/Dungeon/milgrams-throne-room.cfg
+++ b/data/level/Dungeon/milgrams-throne-room.cfg
@@ -53,12 +53,15 @@
 	        						
    									set(frogatto.facing, if(boss_milgram.midpoint_x < frogatto.midpoint_x, -1, 1)),
 									set(npc_milgram.facing, if(boss_milgram.midpoint_x < frogatto.midpoint_x, 1, -1)),
-									if(abs(boss_milgram.midpoint_x - frogatto.midpoint_x) < 200,
-										fire_event('do_dialog'),
-										if(frogatto.midpoint_x < midpoint_x,
-											frogatto.scripted_move_to_x(boss_milgram.midpoint_x - 200, 1, def() -> commands [fire_event(me, 'do_dialog')]),
-											frogatto.scripted_move_to_x(boss_milgram.midpoint_x + 200, -1, def() -> commands [fire_event(me, 'do_dialog')])
-										)
+
+									/*
+										Yes the controller, not milgram himself.
+										
+										What we're trying to do here is to set it up so that frogatto will never walk into a wall.  We always pick the side of the boss which faces towards the center of the level.  The controller is pretty much at the midpoint of the level, so it acts as a sort of 'proxy' for the level's center.
+									*/
+									if(frogatto.midpoint_x > midpoint_x,
+										frogatto.scripted_move_to_x(boss_milgram.midpoint_x - 150, 1, def() -> commands [fire_event(me, 'do_dialog')]),
+										frogatto.scripted_move_to_x(boss_milgram.midpoint_x + 150, -1, def() -> commands [fire_event(me, 'do_dialog')])
 									)
 								]
 				where frogatto = (obj frogatto_playable <- level.player),
