--- a/data/objects/enemies/experimental/gazer_grey.cfg
+++ b/data/objects/enemies/experimental/gazer_grey.cfg
@@ -206,6 +206,16 @@ object_type: [
 		timer_frequency: 200,
 		on_timer: "force_death()",
 		on_end_anim: "set(animation, animation)",
+
+		on_create: "spawn('effects_attache_glow_source', mid_x, mid_y, {
+								time_to_die: 0,
+								parent: me,
+								flicker_type: enum window_light,
+								graphics: enum gazer_flare,
+								scale_factor: 0.13,
+								base_alpha: 100
+							})",
+
 		animation: {
 			image: "enemies/gazer-grey.png",
 			id: "normal",
