Adjusted the line of dialogue given if Imoti suggested something about a barrier in your way, since he's not always specific about it being a force field.

--- a/data/level/Forest/sweltering-swamp.cfg
+++ b/data/level/Forest/sweltering-swamp.cfg
@@ -651,7 +651,10 @@
 			"on_triggered": "if(level.player.get_stored_event('frogatto_has_seen_tempo_village_force_field'), die(),
 				[
 					level.player.store_event('frogatto_has_seen_tempo_village_force_field',1),
-					transient_speech_dialog(level.player, [~Huh...  What's this now?~]),
+					if(level.player.get_stored_event('introduced_to_imoti'),
+						transient_speech_dialog([~This must be what Imoti was talking about.~]),
+						transient_speech_dialog(level.player, [~Huh...  What's this now?~]),
+					),
 					die()
 				]
 			)",
