--- a/data/level/Forest/twisted-trees.cfg
+++ b/data/level/Forest/twisted-trees.cfg
@@ -2740,7 +2740,7 @@
 							if(level.player.get_stored_event('finished_initial_prospera_conversation'),
 								speech_dialog([~Prospera said to go into the mines.~], [~That's where I'll find that eyeball ... thing.~]),
 								if(level.player.get_stored_event('introduced_to_imoti'),
-									speech_dialog([~This must be the forcefield Imoti meant.~]),
+									speech_dialog([~This must be what Imoti was talking about.~]),
 									speech_dialog(level.player, [~Huh...  What's this now?~]),
 								),
 							)
