--- a/data/objects/enemies/plants/forest_shooting_plant_wallmounted.cfg
+++ b/data/objects/enemies/plants/forest_shooting_plant_wallmounted.cfg
@@ -69,15 +69,23 @@ object_type: [
 			player_angle: "lib.math.angle(me,level.player)",
 			track_player: "[add(velocity_x, 150 * cos(player_angle)), add(velocity_y, 150 * sin(player_angle))]",
 			death_effects: "def(string type) -> commands [
-				spawn('particle_attache', {
-					_particle_type: 'forest_shooting_plant_white_sparkle_explode',
+				spawn('forest_shooting_plant_wallmounted.flash', {
 					x: mid_x,
 					y: mid_y,
-					parent: me,
-					time_to_die: 20,
 				}),
-
 			]",			
+
+			contrail_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'white_forest_flower_small_trail',
+					parent: me,
+					time_to_die: 50,
+					variable_name: 'contrail_particles',
+				})",
+				persistent: false,
+			},
+		
 		},
 		on_process: "[set(velocity_x, velocity_x*0.96),set(velocity_y, velocity_y*0.96)]",
 		timer_frequency: 6,
@@ -86,22 +94,13 @@ object_type: [
 
 		on_create: "[
 			schedule(300,force_death()),
-			spawn('particle_attache', {
-				_particle_type: 'forest_shooting_plant_white_sparkles',
-				x: mid_x,
-				y: mid_y,
-				parent: me,
-				time_to_die: 200,
-			}),
 			
-			spawn('particle_attache', {
-				_particle_type: 'forest_shooting_plant_white_sparkles_core',
+			add_object(contrail_particles),
+			spawn('forest_shooting_plant_wallmounted.flash', {
 				x: mid_x,
 				y: mid_y,
-				parent: me,
-				time_to_die: 200,
 			}),
-
+				
 			spawn('effects_attache_glow_source', mid_x, mid_y, {
 				time_to_die: 0,
 				parent: me,
@@ -120,6 +119,43 @@ object_type: [
 			body_area: "all",
 			attack_area: "all",
 		},
-	}
+	},
+	{
+		id: "flash",
+		prototype: ["transient_object"],
+		zorder: "@include data/zorder.cfg:near_player_foreground_effects",
+		dies_on_inactive: true,
+		on_create: "[
+			add_object(my_particles),
+			schedule(4, bind_command(def() [my_particles.turn_off]) ),
+			schedule(75,die())
+		]",
+	
+		properties: {
+			my_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'white_forest_flower_small_burst',
+					parent: me,
+					time_to_die: 150
+				})",
+				persistent: false,
+			},
+		},
+
+		animation: [{
+			"@base": true,
+			image: "enemies/forest-shooting-plant.png",
+			x: 149, y: 1, w: 0, h: 0,
+			pad: 3,
+			frames: 1,
+			duration: 4,
+		},
+		{
+			id: "sparkle",
+		}],
+
+	},
+
 ],
 }
