--- a/data/objects/enemies/plants/white_swaying_flower.cfg
+++ b/data/objects/enemies/plants/white_swaying_flower.cfg
@@ -122,6 +122,27 @@ object_type: [{
 	zorder: "@include data/zorder.cfg:near_player_foreground_effects",
 	prototype: ["shot"],
 	on_end_anim: "animation(animation)",
+	
+	properties: {
+		death_effects: "def(string type) -> commands [
+			spawn('forest_shooting_plant_wallmounted.flash', {
+				x: mid_x,
+				y: mid_y,
+			}),
+		]",			
+
+		contrail_particles: {
+			type: "obj legacy_particle_attache",
+			init: "object('legacy_particle_attache', mid_x, mid_y, {
+				_particle_type: 'white_forest_flower_small_trail',
+				parent: me,
+				time_to_die: 50,
+				variable_name: 'contrail_particles',
+			})",
+			persistent: false,
+		},
+	},
+	
 	animation: {
 		image: "enemies/white-shooting-flower.png",
 		id: "normal",
@@ -136,21 +157,13 @@ object_type: [{
 
 	on_create: "[
 		schedule(300,force_death()),
-		spawn('particle_attache', {
-			_particle_type: 'forest_shooting_plant_white_sparkles',
+		spawn('forest_shooting_plant_wallmounted.flash', {
 			x: mid_x,
 			y: mid_y,
-			parent: me,
-			time_to_die: 200,
 		}),
-		
-		spawn('particle_attache', {
-			_particle_type: 'forest_shooting_plant_white_sparkles_core',
-			x: mid_x,
-			y: mid_y,
-			parent: me,
-			time_to_die: 200,
-		}),
+
+
+		add_object(contrail_particles),
 
 		spawn('effects_attache_glow_source', mid_x, mid_y, {
 			time_to_die: 0,
