--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -132,6 +132,8 @@ properties: {
 		'hortlebort_trail': ['hortlebort_trail', 'hortlebort_trail_light'],
 		'hortlebort_burst': ['hortlebort_burst'],
 		'hortlebort_body': ['hortlebort_body'],
+		'white_forest_flower_small_trail': ['white_forest_flower_small_trail','white_forest_flower_small_trail_core'],
+		'white_forest_flower_small_burst': ['white_forest_flower_small_burst'],
 		'prospera_spell_contrail': ['prospera_spell_contrail'],
 		'prospera_spell_aftermath': ['prospera_spell_aftermath'],
 		'fuse_sparks': ['fuse_sparks'],
@@ -1067,6 +1069,131 @@ particle_system: [
 			duration: 7,
 		}],
 	},
+	
+	
+	{
+		id: "white_forest_flower_small_trail",
+		type: "simple",
+		spawn_rate: 700,
+		time_to_live: 60,
+		min_x: -3,
+		max_x: 3,
+		min_y: -3,
+		max_y: 3,
+		velocity_magnitude: 250,
+		velocity_magnitude_random: 300,
+		velocity_rotate_random: 360,
+		animation: [{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 17,
+			w: 5,
+			h: 5,
+			pad: 3,
+			frames: 12,
+			duration: 3,
+		},{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 17,
+			w: 5,
+			h: 5,
+			pad: 3,
+			frames: 12,
+			duration: 5,
+		},{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 25,
+			w: 5,
+			h: 5,
+			pad: 3,
+			frames: 12,
+			duration: 3,
+		},{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 25,
+			w: 5,
+			h: 5,
+			pad: 3,
+			frames: 12,
+			duration: 5,
+		}],
+	},
+	{
+		id: "white_forest_flower_small_trail_core",
+		type: "simple",
+		spawn_rate: 600,
+		time_to_live: 40,
+		min_x: -3,
+		max_x: 3,
+		min_y: -3,
+		max_y: 3,
+		velocity_magnitude: 50,
+		velocity_magnitude_random: 100,
+		velocity_rotate_random: 360,
+		animation: [{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 46,
+			w: 7,
+			h: 7,
+			pad: 3,
+			frames: 10,
+			duration: 1,
+		},{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 46,
+			w: 7,
+			h: 7,
+			pad: 3,
+			frames: 10,
+			duration: 2,
+		}],
+	},
+	{
+		id: "white_forest_flower_small_burst",
+		type: "simple",
+		spawn_rate: 8000,
+		time_to_live: 50,
+		min_x: -1,
+		max_x: 1,
+		min_y: -1,
+		max_y: 1,
+		velocity_magnitude: 700,
+		velocity_magnitude_random: 600,
+		velocity_rotate_random: 360,
+		animation: [{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 46,
+			w: 7,
+			h: 7,
+			pad: 3,
+			frames: 10,
+			duration: 1,
+		},{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 46,
+			w: 7,
+			h: 7,
+			pad: 3,
+			frames: 10,
+			duration: 2,
+		}],
+	},
+
 	{
 		id: "prospera_spell_contrail",
 		type: "simple",
