Fixed an incorrect level palette.

--- a/data/level/Forest/forgotten-falls.cfg
+++ b/data/level/Forest/forgotten-falls.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"background": "forest-dark",
 	"background_offset": [0,0],
-	"background_palette": "forest_clean",
+	"background_palette": "forest_graveyard_shift",
 	"character": [
 		{
 			"_uuid": "52f180dff02d423b9fbb3b0646c259bb",
@@ -3786,7 +3786,7 @@
 	"id": "forgotten-falls.cfg",
 	"music": "TemplateFrogFinal.ogg",
 	"next_level": "glowing-gate.cfg",
-	"palettes": ["forest_clean"],
+	"palettes": ["forest_graveyard_shift"],
 	"preloads": "",
 	"previous_level": "celadon-clearing.cfg",
 	"segment_height": 0,
