Replaced the rest of the white forest plant shot particles with legacy attaches.

--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -133,6 +133,7 @@ properties: {
 		'hortlebort_burst': ['hortlebort_burst'],
 		'hortlebort_body': ['hortlebort_body'],
 		'white_forest_flower_small_trail': ['white_forest_flower_small_trail','white_forest_flower_small_trail_core'],
+		'white_forest_flower_large_trail': ['white_forest_flower_large_trail','white_forest_flower_large_trail_core'],
 		'white_forest_flower_small_burst': ['white_forest_flower_small_burst'],
 		'prospera_spell_contrail': ['prospera_spell_contrail'],
 		'prospera_spell_aftermath': ['prospera_spell_aftermath'],
@@ -1159,6 +1160,98 @@ particle_system: [
 			duration: 2,
 		}],
 	},
+
+
+	{
+		id: "white_forest_flower_large_trail",
+		type: "simple",
+		spawn_rate: 1400,
+		time_to_live: 60,
+		min_x: -10,
+		max_x: 10,
+		min_y: -10,
+		max_y: 10,
+		velocity_magnitude: 250,
+		velocity_magnitude_random: 300,
+		velocity_rotate_random: 360,
+		animation: [{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 17,
+			w: 5,
+			h: 5,
+			pad: 3,
+			frames: 12,
+			duration: 3,
+		},{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 17,
+			w: 5,
+			h: 5,
+			pad: 3,
+			frames: 12,
+			duration: 5,
+		},{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 25,
+			w: 5,
+			h: 5,
+			pad: 3,
+			frames: 12,
+			duration: 3,
+		},{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 25,
+			w: 5,
+			h: 5,
+			pad: 3,
+			frames: 12,
+			duration: 5,
+		}],
+	},
+	{
+		id: "white_forest_flower_large_trail_core",
+		type: "simple",
+		spawn_rate: 1800,
+		time_to_live: 40,
+		min_x: -10,
+		max_x: 10,
+		min_y: -10,
+		max_y: 10,
+		velocity_magnitude: 50,
+		velocity_magnitude_random: 100,
+		velocity_rotate_random: 360,
+		animation: [{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 46,
+			w: 7,
+			h: 7,
+			pad: 3,
+			frames: 10,
+			duration: 1,
+		},{
+			id: "sparkle",
+			image: "enemies/forest-shooting-plant.png",
+			x: 149,
+			y: 46,
+			w: 7,
+			h: 7,
+			pad: 3,
+			frames: 10,
+			duration: 2,
+		}],
+	},
+
+
 	{
 		id: "white_forest_flower_small_burst",
 		type: "simple",
