--- a/data/objects/enemies/plants/forest_shooting_plant_huge.cfg
+++ b/data/objects/enemies/plants/forest_shooting_plant_huge.cfg
@@ -88,14 +88,22 @@ object_type: [
 			spawn_little_shot: "spawn('forest_shooting_plant_huge.shot', mid_x, mid_y, {velocity_x: 1d400-200, velocity_y: -400-1d200} )",
 
 			death_effects: "def(string type) -> commands [
-				spawn('particle_attache', {
-					_particle_type: 'forest_shooting_plant_white_sparkle_explode',
+				spawn('forest_shooting_plant_wallmounted.flash', {
 					x: mid_x,
 					y: mid_y,
-					parent: me,
-					time_to_die: 20,
 				}),
 			]",			
+
+			contrail_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'white_forest_flower_large_trail',
+					parent: me,
+					time_to_die: 50,
+					variable_name: 'contrail_particles',
+				})",
+				persistent: false,
+			},
 
 		},
 		on_timer: "track_player",
@@ -103,20 +111,10 @@ object_type: [
 		timer_frequency: 6,
 		on_create: "[
 			schedule(300,force_death()),
-			spawn('particle_attache', {
-				_particle_type: 'forest_shooting_plant_white_sparkles_large',
+			add_object(contrail_particles),
+			spawn('forest_shooting_plant_wallmounted.flash', {
 				x: mid_x,
 				y: mid_y,
-				parent: me,
-				time_to_die: 200,
-			}),
-			
-			spawn('particle_attache', {
-				_particle_type: 'forest_shooting_plant_white_sparkles_core_large',
-				x: mid_x,
-				y: mid_y,
-				parent: me,
-				time_to_die: 200,
 			}),
 
 			spawn('effects_attache_glow_source', mid_x, mid_y, {
@@ -128,12 +126,15 @@ object_type: [
 			}),
 		]",
 		
-		on_collide_level: "if(cycle - last_collided_level > 20, 
-								[set(velocity_y, -(1.5*hp_factor*velocity_y)),
-								get_hit_sourceless(enum neutral,1),
-								set(last_collided_level, cycle),
-								map(range(1+1d2),spawn_little_shot)
-								])",
+		on_collide_level: "
+			if(cycle - last_collided_level > 20, 
+				[
+					set(velocity_y, -(1.5*hp_factor*velocity_y)),
+					get_hit_sourceless(enum neutral, 1),
+					set(last_collided_level, cycle),
+					map( range(1+1d2), spawn_little_shot)
+				]
+			)",
 		
 		animation: {
 			image: "enemies/forest-shooting-plant-huge.png",
@@ -160,35 +161,31 @@ object_type: [
 			last_collided_level: { type: "int", default: -10 },
 			
 			death_effects: "def(string type) -> commands [
-				spawn('particle_attache', {
-					_particle_type: 'forest_shooting_plant_white_sparkle_explode',
+				spawn('forest_shooting_plant_wallmounted.flash', {
 					x: mid_x,
 					y: mid_y,
-					parent: me,
-					time_to_die: 20,
 				}),
 			]",	
+
+
+			contrail_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'white_forest_flower_small_trail',
+					parent: me,
+					time_to_die: 50,
+					variable_name: 'contrail_particles',
+				})",
+				persistent: false,
+			},
 		},
 
 		on_end_anim: "animation('normal')",
 		timer_frequency: 6,
 		on_create: "[
 			schedule(300,force_death()),
-			spawn('particle_attache', {
-				_particle_type: 'forest_shooting_plant_white_sparkles',
-				x: mid_x,
-				y: mid_y,
-				parent: me,
-				time_to_die: 200,
-			}),
-			
-			spawn('particle_attache', {
-				_particle_type: 'forest_shooting_plant_white_sparkles_core',
-				x: mid_x,
-				y: mid_y,
-				parent: me,
-				time_to_die: 200,
-			}),
+			add_object(contrail_particles),
+
 
 			spawn('effects_attache_glow_source', mid_x, mid_y, {
 				time_to_die: 0,
