--- a/data/objects/enemies/bugs/hortlebort_grey.cfg
+++ b/data/objects/enemies/bugs/hortlebort_grey.cfg
@@ -10,7 +10,6 @@ properties: {
 #-------------------------- constructor/destructor logic --------------------------#
 	specific_creature_type_constructor: "commands :: 	[
 															add_object(body_particles),
-															set(body_particles.relative_y, 20),
 														]",
 
 #-------------------------- metadata --------------------------#
@@ -30,6 +29,7 @@ properties: {
 			_particle_type: 'hortlebort_body',
 			parent: me,
 			time_to_die: 50,
+			custom_relative_pos_default: {mid_x: 0,	mid_y: 20},
 			variable_name: 'body_particles',
 		})",
 		persistent: false,
@@ -164,7 +164,10 @@ object_type: [
 		attack_damage: "if(higher_difficulty, 2, 1)",
 		
 		death_effects: "def(string type) -> commands [
-			spawn('particle_attache',x,y, {_particle_type:'hortlebort_burst', relative_y: 0, parent: me, time_to_die: 150}),
+			spawn('hortlebort_grey.flash', {
+				x: mid_x,
+				y: mid_y,
+			}),
 		]",			
 
 		shot_glow: {
