--- a/data/objects/enemies/plants/shooting_plant.cfg
+++ b/data/objects/enemies/plants/shooting_plant.cfg
@@ -17,17 +17,35 @@ properties: {
 	description: "~Finally, a daisy that can shoot back!~",
 	taste: "~Oily, kind of mineral-y, not good at all. Way twitchier than a plant should be.~",
 
-	shoot_at: "def([int] tgt) -> commands
-		[sound_falloff('pollen-shot.wav'),spawn('shooting_plant.pollen_ball', midpoint_x+20*facing, midpoint_y-12, facing, [set(child.velocity_x, shotVel[0]), set(child.velocity_y, shotVel[1])])]
+	shoot_at: "def({x: int, y: int} target) -> commands
+		[
+			sound_falloff('pollen-shot.wav'),
+			spawn('shooting_plant.pollen_ball',
+				midpoint_x + 20 * facing,
+				midpoint_y - 12,
+				facing,
+			[
+				set(child.velocity_x, shotVel[0]),
+				set(child.velocity_y, shotVel[1])
+			])
+		]
+
 		where shotVel = orbit(0, 0, angle-90, lib.math.constrain(250, shotVector, 650)),
 		where shotVector = sqrt(abs((0.5*gravity*x^2*(tan(angle)^2+1))/(x*tan(angle)-y)))
 		where
 			gravity = 2000,
 			angle = 45*self.facing, //Something needs to be jiggered for this to work at different angles.
-			x = tgt[0]-(midpoint_x+20*facing),
-			y = (midpoint_y-12)-tgt[1]",
+			x = target.x-(midpoint_x+20*facing),
+			y = (midpoint_y-12)-target.y",
 	shoot_unaimed: "commands :: [play_sound__falloff('pollen-shot.wav'),spawn('shooting_plant.pollen_ball', midpoint_x+20*facing, midpoint_y-12, facing, [set(child.velocity_x, 300*facing), set(child.velocity_y, -500)])]",
 	springiness: "160",
+
+	player_lead_time: "int :: 30",
+	predicted_player_mid: "{x: int, y: int} ::
+		if(level.player is obj frogatto_playable,
+			(obj frogatto_playable <- level.player).position_predictor.prediction(player_lead_time),
+			{x: level.player.mid_x, y: level.player.mid_y},
+		)",
 },
 
 
@@ -35,9 +53,7 @@ properties: {
 on_end_stand_anim: "if(not is_facing_towards_player, turn_around, animation('shoot'))",
 on_end_shoot_anim: "animation('stand')",
 on_end_spring_anim: "animation('stand')",
-on_shoot: "if(higher_difficulty,
-	shoot_at(level.player.mid_xy), 
-	shoot_unaimed)",
+on_shoot: "shoot_at(predicted_player_mid)",
 on_end_hurt_anim: "animation('stand')",
 
 
