--- a/data/objects/enemies/plants/shooting_plant.cfg
+++ b/data/objects/enemies/plants/shooting_plant.cfg
@@ -19,6 +19,7 @@ properties: {
 
 	shoot_at: "def({x: int, y: int} target) -> commands
 		[
+			//spawn('text_flash',midpoint_x,midpoint_y-40,{ txt: '' + lead_time_prediction, font: 'white_outline' }),
 			sound_falloff('pollen-shot.wav'),
 			spawn('shooting_plant.pollen_ball',
 				midpoint_x + 20 * facing,
@@ -40,10 +41,24 @@ properties: {
 	shoot_unaimed: "commands :: [play_sound__falloff('pollen-shot.wav'),spawn('shooting_plant.pollen_ball', midpoint_x+20*facing, midpoint_y-12, facing, [set(child.velocity_x, 300*facing), set(child.velocity_y, -500)])]",
 	springiness: "160",
 
-	player_lead_time: "int :: 30",
+	distance_to_player: "lib.math.length(me, level.player)",
+	x_distance_to_player: "int :: abs(mid_x - level.player.mid_x)",
+	y_distance_to_player: "int :: abs(mid_y - level.player.mid_y)",
+
+	/*
+		Some funky math going on for the prediction:
+
+		1] a coefficient to account for the quite constant amount of time the projectile takes to fly upwards, and then fall down to the same height it spawned at.
+		2] a slight exponent to account for the *accelerative* nature of gravity; the fall speed gets a bit faster over time
+		3] a scaling factor to normalize the scales of distance and time
+
+		This is all just a wild estimate, and that's fine for these guys to actually feel somewhat inaccurate, especially at a distance.
+	*/
+	lead_time_prediction: "int :: lib.math.round(23 + (y_distance_to_player/4.4) ^ 0.89)",
+
 	predicted_player_mid: "{x: int, y: int} ::
 		if(level.player is obj frogatto_playable,
-			(obj frogatto_playable <- level.player).position_predictor.prediction(player_lead_time),
+			(obj frogatto_playable <- level.player).position_predictor.prediction(lead_time_prediction),
 			{x: level.player.mid_x, y: level.player.mid_y},
 		)",
 },
@@ -152,7 +167,8 @@ object_type: [
 			properties: {
 				death_effects: "def(string type) -> commands [
 					spawn('pollen_impact_particle',mid_x,mid_y,0),
-					play_sound__falloff('Seed-fall')
+					play_sound__falloff('Seed-fall'),
+					//spawn('text_flash',midpoint_x,midpoint_y-40,{ txt: '' + me.cycle, font: 'white_outline' }),
 				]",
 			},
 
