--- a/data/level/General/titlescreen.cfg
+++ b/data/level/General/titlescreen.cfg
@@ -164,14 +164,28 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "hint_text_manager",
-			"on_process": "[if( (cycle%400) = 1, [set(custom_storage['num'], (int(custom_storage['num'])+1) %3),fire_event('timer')]), if( cycle = 1, set(level.player.vertical_look, -200))]",
-			"on_timer": "[	if(custom_storage['num'] = 0, text_obj1.set_text(if(TOUCH_SCREEN,~Tap ← or → to walk.~,~Press ${LEFT_KEY} or ${RIGHT_KEY} to walk.~))),
+			"on_process": "[
+				if( (cycle % 400) = 1,
+					[
+						set(custom_storage['num'], (int(custom_storage['num'])+1) % 4 ),
+						fire_event('timer')
+					]
+				),
+				if( cycle = 1,
+					set(level.player.vertical_look, -200)
+				)
+			]",
+			"on_timer": "[
+				if(custom_storage['num'] = 0, text_obj1.set_text(if(TOUCH_SCREEN,~Tap ← or → to walk.~,~Press ${LEFT_KEY} or ${RIGHT_KEY} to walk.~))),
 				if(custom_storage['num'] = 0, text_obj2.set_text(if(TOUCH_SCREEN,~Quickly tap ← or → twice to run.~,~Quickly press ${LEFT_KEY} or ${RIGHT_KEY} twice to run.~))),
 				#the following two lines will seem very odd without knowing this:  they're NOT equivalent; on iOS, we leave out the explanation of crouch, because crouch doesn't exist.#
 				if(custom_storage['num'] = 1, text_obj1.set_text(if(TOUCH_SCREEN,~Walk in front of a door or person,~,~Press ${DOWN_KEY} to crouch.~))),
 				if(custom_storage['num'] = 1, text_obj2.set_text(if(TOUCH_SCREEN,~and tap ☆ to interact with them.~,~Press ${UP_KEY} to talk, and use things like doors.~))),
 				if(custom_storage['num'] = 2, text_obj1.set_text(if(TOUCH_SCREEN,~Tap ○ to jump.~,~Press ${JUMP_KEY} to jump.~))),
-				if(custom_storage['num'] = 2, text_obj2.set_text(if(TOUCH_SCREEN,~Tap □ to use a character's attacks.~,~Press ${TONGUE_KEY} to use a character's attacks.~)))] 
+				if(custom_storage['num'] = 2, text_obj2.set_text(if(TOUCH_SCREEN,~Tap □ to use a character's attacks.~,~Press ${TONGUE_KEY} to use a character's attacks.~))),
+				if(custom_storage['num'] = 3, text_obj1.set_text(~Press Control-E to enter the Level Editor.~)),
+				if(custom_storage['num'] = 3, text_obj2.set_text(~Visit our website/discord/wiki for how-tos.~)),
+			] 
 					where text_obj1 = (obj text_controller <- get_object(level, 'fancy1')), text_obj2 = (obj text_controller <- get_object(level, 'fancy2'))
 				",
 			"property_data": {
