Fixed an issue where padlock keys weren't preventing their respawns if the player carried the key in question back onto the same level.  This also would break the key-respawning mechanism, since something was physically obstructing the location to move the key to.

--- a/data/objects/props-interactive/locks/padlock_key.cfg
+++ b/data/objects/props-interactive/locks/padlock_key.cfg
@@ -16,6 +16,13 @@ properties: {
 #-------------------------- constructor/destructor logic --------------------------#
 	throwable_object_contructor: "commands :: [
  		if(level.player.get_stored_event(event_name) = 1, remove_object(me)),
+ 		if(level.player is obj frogatto_playable,
+ 			if(level.player.swallowed_object is obj padlock_key,
+				if(level.player.swallowed_object.original_label = me.label,
+					remove_object(me)
+				)
+ 			)
+ 		),
  
  		//if(original_label = null, set(original_label, label)),
 		if(color = null, set(color, attributes['color'])),
