Fixed an assert on the little joke mortimer makes if you bring back a second ant.

--- a/data/level/Seaside/secluded-hut-interior.cfg
+++ b/data/level/Seaside/secluded-hut-interior.cfg
@@ -416,11 +416,20 @@
 				frogatto,	[~... most of which seem inclined to kill me.~])))
 	]	where frogatto = (obj frogatto_playable <- level.player)
 		where mortimer = self",
-			"on_too_many_ants": "if(level.player is obj frogatto_playable, if(not level.player.get_stored_event('mortimer_juggled_golden_ant_tease') = 1,
-										[schedule(10, transient_speech_dialog(mortimer, 300,
-										set(mortimer.animation, 'talk_expound'),
-										[~I only wanted one.\\nI'm not studying their mating habits.~])),
-										level.player.store_event('mortimer_juggled_golden_ant_tease',1)]))
+			"on_too_many_ants": "
+				if(level.player is obj frogatto_playable,
+					if(not level.player.get_stored_event('mortimer_juggled_golden_ant_tease') = 1,
+						[
+							schedule(10, [
+								set(mortimer.animation, 'talk_expound'),
+								transient_speech_dialog(mortimer, 300,
+									[~I only wanted one.\\nI'm not studying their mating habits.~]
+								)
+							]),
+							level.player.store_event('mortimer_juggled_golden_ant_tease',1)
+						]
+					)
+				)
 										
 			where mortimer = self",
 			"property_data": {
