Added the 'set_perma_show' function to the coin display. Once set to true, the coin counter remains visible until the next level load. Additionally added level controllers to Chopple's shop, Prospera's shop and Tempo Village's shop to make the hud permanently visible upon level load.

--- a/data/objects/gui-components/hud-components/hud_gold_display.cfg
+++ b/data/objects/gui-components/hud-components/hud_gold_display.cfg
@@ -2,16 +2,22 @@
 	id: "hud_gold_display",
 	prototype: ["hud_component"],
 	hidden_in_game: true,
-	
 
 	properties: {
+		perma_show: {type: "bool", default: false},
 		set_text: "def(string text) -> commands [set(txt, text), fire_event(me, 'create')]",
 		txt: {type: "string", default: "+"},
 		size: "2",
 		font: "string :: 'numbers_gold_enormous'",
 		align: "'right'",
 		
-		
+		set_perma_show: "def(bool show) -> commands [
+			set(perma_show, show),
+			if(show,
+				set(mid_y, native_position.y + vertical_full_offset),
+			)	
+		]",		
+	
 		comparison_point_for_coins: { type: "int", default: 0 },
 		last_changed_coins: { type: "int", default: -500 },
 		display_timeout: "decimal :: 100",
@@ -25,6 +31,7 @@
 		poll_for_coin_changes: "if(comparison_point_for_coins != level.player.coins,
 									[
 										set(comparison_point_for_coins, level.player.coins),
+										// The animation would be better of if re-written using `animate`, and a timer trigger event for when the coin display should slide out - al0f
 										set(last_changed_coins, me.cycle),
 									]
 								)",
@@ -35,8 +42,6 @@
 		
 		coin_icon: { type: "obj hud_gold_display.coin_icon", init: "object('hud_gold_display.coin_icon', x, y, {parent: me})", },
 	},
-
-	on_create: "[text(txt, font, size, align), add_object(coin_icon), set(coin_icon.relative_x, 60), set(coin_icon.relative_y, 8)]",
 
 	on_window_resize: "set(xy, [new_pos.x, new_pos.y])
 		where new_pos = {x:screen_w - 66*2,y:50}
@@ -49,8 +54,12 @@
 			me.set_text( str(level.player.coins) + '×')
 			;
 			set(text_alpha, alpha_proxy),
-			poll_for_coin_changes,
-			set_vertical_pos,
+			if(not perma_show,
+				[
+					poll_for_coin_changes,
+					set_vertical_pos,
+				]
+			)
 		])
 	]",
 	
@@ -59,7 +68,6 @@
 		id: "coin_icon",
 		prototype: ["hud_component"],
 
-		
 		on_end_anim: "animation('normal')",
 		
 		animation: {
@@ -71,5 +79,6 @@
 			frames: 6,
 			duration: 6,
 		},
+		
 	}
 }
