--- a/data/level/Seaside/chopple-shop-interior.cfg
+++ b/data/level/Seaside/chopple-shop-interior.cfg
@@ -164,13 +164,11 @@
 			"_uuid": "b538bbafa3994f60bcf60b3129f866ff",
 			"current_frame": "normal",
 			"custom": true,
-			"face_right": 1,
 			"label": "_5092ca794242",
-			"time_in_frame": 0,
-			"type": "store_item",
 			"property_data": {
 				"settable_item_id": "@eval enum item_heart_container"
 			},
+			"type": "store_item",
 			"x": 360,
 			"y": 303
 		},
@@ -179,10 +177,10 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_5092ca42",
-			"type": "store_item",
 			"property_data": {
 				"settable_item_id": "@eval enum item_tongue_extension"
 			},
+			"type": "store_item",
 			"x": 208,
 			"y": 310
 		},
@@ -291,10 +289,10 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_444bfbff",
-			"type": "store_item",
 			"property_data": {
 				"settable_item_id": "@eval enum item_lesser_mana_talisman"
 			},
+			"type": "store_item",
 			"x": 721,
 			"y": 342
 		},
@@ -303,18 +301,34 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_67af979",
-			"type": "store_item",
 			"property_data": {
 				"settable_item_id": "@eval enum item_health_potion"
 			},
+			"type": "store_item",
 			"x": 880,
 			"y": 343
+		},
+		{
+			"_uuid": "5db522f9122841c4917009f93d53d359",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "show_coin_hud",
+			"on_start_level": "[frogatto.gui_gold_display.set_perma_show(true)] where frogatto = (obj frogatto_playable <- level.player)",
+			"property_data": {
+				"_x2_bound": 714,
+				"_x_bound": 464,
+				"_y2_bound": 426,
+				"_y_bound": 176
+			},
+			"type": "level_controller",
+			"x": 564,
+			"y": 276
 		}
 	],
 	"dimensions": [-288,-64,1503,704],
 	"id": "chopple-shop-interior.cfg",
 	"music": "NeoShop.ogg",
-	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
+	"palettes": ["chrome_to_brass","interior_seaside_yellow"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
