Created a prototype to handle frogatto's tongue, in order to pave the way for a wobbling tongue (and any other wobbling rope-like object.  Currently has merely identical behavior to the existing tongue.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3081,29 +3081,17 @@ object_type: [
 	#-------------------------- TONGUE/HEAD --------------------------#
 	{
 		id: "tongue_shaft",
+		prototype: ["wobbly_rope"],
 		always_active: true,
 		serializable: false,
 		zsub_order: 5,
 		solid_dimensions: [],
-		is_strict: true,
 		
 		properties: {
-			_x_1: { type: "decimal", init: "mid_x" },
-			_x_2: { type: "decimal", init: "mid_x+1" },
-			_y_1: { type: "decimal", init: "mid_y" },
-			_y_2: { type: "decimal", init: "mid_y+1" },
-
 			is_player_body_part: true,
-			length: "decimal :: lib.math.length(_x_1,_y_1,_x_2,_y_2)",
-			set_ends: "def(decimal new_x1, decimal new_y1, decimal new_x2, decimal new_y2) -> commands [set(_x_1,new_x1), set(_y_1,new_y1), set(_x_2,new_x2), set(_y_2,new_y2), fire_event(me,'create')]",
+
 		},
 		
-		on_create: "[
-				set(mid_x, int((_x_2+_x_1)/2)),
-				set(y, int((_y_2+_y_1)/2 - (length/2))),
-				set(draw_area, [0, 0, img_w/2, length/2]),
-				set(rotate,(angle(_x_1,_y_1,_x_2,_y_2)-90) )
-			]",
 			
 		animation: {
 			id: "default",
@@ -3203,10 +3191,12 @@ object_type: [
 			min_swallow_size: "10",
 
 			length_per_time: "def(int time) -> int _frog.tongue_length*(tongue_duration/2 - abs(tongue_duration/2 - time))",
-			set_shaft: "def(int time, decimal angle) -> commands [	_shaft.set_ends(	_froghead.mid_x + x_offset,
-																_froghead.mid_y + ybase_offset,
-																_froghead.mid_x + (length_per_time(time)*cos(angle)) * facing + x_offset,
-																_froghead.mid_y + ybase_offset + (length_per_time(time)*sin(angle))  )]",
+			set_shaft: "def(int time, decimal angle) -> commands [
+				_shaft.set_ends(	_froghead.mid_x + x_offset,
+				_froghead.mid_y + ybase_offset,
+				_froghead.mid_x + (length_per_time(time)*cos(angle)) * facing + x_offset,
+				_froghead.mid_y + ybase_offset + (length_per_time(time)*sin(angle))  )
+			]",
 			adjust_position: "def(int time, decimal angle) -> commands	[set(midpoint_x, int(_froghead.midpoint_x + (length_per_time(time)*cos(angle)) * facing  + x_offset + if(facing = 1, 2,0))), 
 												set(midpoint_y, int(_froghead.midpoint_y + ybase_offset + (length_per_time(time)*sin(angle)) + if(facing = -1 and angle = 0, -1, 0) )),
 												set(rotate, angle * facing)]",
