--- a/data/objects/experimental/wobbly_thing.cfg
+++ b/data/objects/experimental/wobbly_thing.cfg
@@ -35,10 +35,13 @@ properties: {
 	custom_draw_params: "[decimal|[decimal,decimal]] ::
 		(([0.0, 0.25, 0.5, 0.75, 1.0,
 		 2.0, 2.25, 2.5, 2.75, 3.0,
-		c_upper_edge, map(c_upper_edge, value * 0.60), map(c_upper_edge, value * 0.3), map(c_upper_edge, value * 0.05),still, 
+		c_upper_edge(0.0), c_upper_edge(0.25), c_upper_edge(0.5), c_upper_edge(0.75), c_upper_edge(1.0), 
 		still, map(c_lower_edge, value * 0.05), map(c_lower_edge, value * 0.3), map(c_lower_edge, value * 0.60), c_lower_edge
 		]) where still = [0,0]
-			where c_upper_edge = [upper_edge[0]*facing, upper_edge[1]]
+		
+			where c_upper_edge = def(decimal offset) -> [decimal,decimal] dump([ 0 * facing,  20 * sin(offset * 3.14 * 5.0  + cycle*10.0) ])
+		
+			//where c_upper_edge = [upper_edge[0]*facing, upper_edge[1]]
 			where c_lower_edge = [lower_edge[0]*facing, lower_edge[1]]
 			where upper_edge = zip( [x2,mid_y],newPos, a-b)
 			where lower_edge = zip( [x2,mid_y],newPos, a-b))
@@ -51,7 +54,7 @@ properties: {
 
 on_process: "[
 	set(_magnitude, sin(cycle)*10),
-	debug(_magnitude),
+//	debug(_magnitude),
 
 	set(draw_area, [0, 0, img_w * 3 + sin(cycle)*20, img_h/2]),
 
