Further work enhancing the wobble graphic.

--- a/data/objects/experimental/wobbly_thing.cfg
+++ b/data/objects/experimental/wobbly_thing.cfg
@@ -35,17 +35,27 @@ properties: {
 	custom_draw_params: "[decimal|[decimal,decimal]] ::
 		(([0.0, 0.25, 0.5, 0.75, 1.0,
 		 2.0, 2.25, 2.5, 2.75, 3.0,
-		c_upper_edge(0.0), c_upper_edge(0.25), c_upper_edge(0.5), c_upper_edge(0.75), c_upper_edge(1.0), 
-		still, map(c_lower_edge, value * 0.05), map(c_lower_edge, value * 0.3), map(c_lower_edge, value * 0.60), c_lower_edge
+		wt(0.0), wt(0.25), wt(0.5), wt(0.75), wt(1.0), 
+		//flatten(map(range(5), 
+		wb(0.0), wb(0.25), wb(0.5), wb(0.75), wb(1.0), 
+
+		//still, map(c_lower_edge, value * 0.05), map(c_lower_edge, value * 0.3), map(c_lower_edge, value * 0.60), c_lower_edge
 		]) where still = [0,0]
 		
-			where c_upper_edge = def(decimal offset) -> [decimal,decimal] dump([ 0 * facing,  20 * sin(offset * 3.14 * 5.0  + cycle*10.0) ])
+			where wt = def(decimal offset) generate_wobble(offset, 1)
+			where wb = def(decimal offset) generate_wobble((1.0 - offset) + 3.14 * 1.0, -1)
+		
+			where c_upper_edge = def(decimal offset) -> [decimal,decimal] dump([ 0 * facing,  20 * sin(offset * 3.14 * 125.0  + cycle*10.0) ])
 		
 			//where c_upper_edge = [upper_edge[0]*facing, upper_edge[1]]
 			where c_lower_edge = [lower_edge[0]*facing, lower_edge[1]]
 			where upper_edge = zip( [x2,mid_y],newPos, a-b)
 			where lower_edge = zip( [x2,mid_y],newPos, a-b))
 			where newPos = (orbit(x,mid_y, sin(15*cycle)*_magnitude, img_w))",
+
+		generate_wobble: "def(decimal offset, int polarity) -> [decimal,decimal] dump([ 0 * facing, polarity * 10.0 * sin(offset * 3.14 * 125.0  + cycle*10.0) ])",
+		
+		create_offsets: "def(int item_count) -> [decimal] map(range(item_count), (value)/decimal(item_count - 1) )",
 			
 #-------------------------- vars --------------------------#
 	_magnitude: { type: "decimal", default: 0, persistent: false },
